RESOLVED FIXED77473
REGRESSION (WebKit2): event.keyCode is always zero when typing in Russian
https://bugs.webkit.org/show_bug.cgi?id=77473
Summary REGRESSION (WebKit2): event.keyCode is always zero when typing in Russian
Alexey Proskuryakov
Reported 2012-01-31 13:42:33 PST
Steps to Reproduce: 1. Check for event.keyCode in a keydown event handler 2. Press any key in Russian keyboard layout 3. event.keyCode is always zero <rdar://problem/10751357>
Attachments
proposed fix (32.84 KB, patch)
2012-01-31 13:47 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2012-01-31 13:47:57 PST
Created attachment 124814 [details] proposed fix
WebKit Review Bot
Comment 2 2012-01-31 19:21:41 PST
Comment on attachment 124814 [details] proposed fix Clearing flags on attachment: 124814 Committed r106422: <http://trac.webkit.org/changeset/106422>
WebKit Review Bot
Comment 3 2012-01-31 19:21:45 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 4 2012-03-30 10:19:16 PDT
*** Bug 82715 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.