REGRESSION (WebKit2): event.keyCode is always zero when typing in Russian https://bugs.webkit.org/show_bug.cgi?id=77473 <rdar://problem/10751357>

Reviewed by Darin Adler.

Source/WebCore:

Test: platform/mac/fast/events/non-roman-key-code.html

* WebCore.exp.in:
* platform/mac/PlatformEventFactoryMac.h:
* platform/mac/PlatformEventFactoryMac.mm:
(WebCore::keyIdentifierForKeyEvent):
(WebCore::windowsKeyCodeForKeyEvent):
Export functions for reuse in WebKit2. I did not attempt any larger refactoring at this time.

Source/WebKit2:

* Shared/mac/WebEventFactory.mm: Removed broken copy/pasted implementation in favor of
WebCore ones.

Tools:

* DumpRenderTree/mac/EventSendingController.mm:
(-[EventSendingController keyDown:withModifiers:withLocation:]):
* WebKitTestRunner/mac/EventSenderProxy.mm:
(WTR::EventSenderProxy::keyDown):
Added a new special keyDown value to test this.


Canonical link: https://commits.webkit.org/94376@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106422 268f45cc-cd09-0410-ab3c-d52691b4dbfc